<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:src="@drawable/logo"
            android:tint="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/inscrire_label"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#D81B60"
            android:hint="@string/entrer_nom"
            android:drawableLeft="@drawable/ic_face"
            android:drawableStart="@drawable/ic_face"
            android:drawablePadding="16dp"
            android:id="@+id/name_input"

            android:drawableTint="@android:color/white"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:inputType="textEmailAddress" />



        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#D81B60"
            android:hint="@string/enter_email"
            android:padding="10dp"
            android:drawableLeft="@drawable/ic_mail_24dp"
            android:drawableStart="@drawable/ic_mail_24dp"
            android:drawablePadding="16dp"
            android:inputType="textEmailAddress"

            android:drawableTint="@android:color/white"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:id="@+id/email_input"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#D81B60"
            android:hint="@string/enter_mot_passe"
            android:drawableTint="@android:color/white"
            android:padding="10dp"
            android:drawableStart="@drawable/ic_lock_outline_24dp"
            android:drawableLeft="@drawable/ic_lock_outline_24dp"
            android:drawablePadding="16dp"

            android:inputType="textPassword"


            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:id="@+id/password_input"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#CE93D8"
            android:text="@string/inscrire"

            android:textColor="@android:color/white"
            android:id="@+id/btn_register" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:background="@drawable/circle_button"
                android:src="@drawable/ic_facebook"
                android:layout_margin="4dp"
                android:tint="@android:color/white"/>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a_compte"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth_compt"
            android:textColor="@android:color/white"
            android:textStyle="bold"
           android:id="@+id/go_to_login"/>

    </LinearLayout>

</RelativeLayout>