<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_acceuil"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.nidhal.frontend.mainclasses.AcceuilActivity"
    android:orientation="vertical">

    <LinearLayout
        android:gravity="center_horizontal"

        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:orientation="horizontal"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="50dp">




        <ImageView
            android:layout_width="match_parent"
            android:layout_height="61dp"
            app:srcCompat="@drawable/logo"
            android:id="@+id/imageView"
            android:layout_gravity="center"
            android:layout_weight="2"/>

        <TextView android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal|center"

            android:text="@string/acceuil_parag"
            android:id="@+id/textView4">

        </TextView>


    </LinearLayout>


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:textSize="40sp"
        android:textColor="#E91E63"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:textColor="#2196F3"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:id="@+id/user_name"
            android:textStyle="bold"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="!"
            android:textSize="40sp"
            android:textColor="#2196F3"
            android:textStyle="bold"
            />

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/remplir_constat_help"
        android:layout_marginTop="50dp"
        />

    <Button
        android:text="@string/remplir_constat_amiable"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/remplir_constat"

        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:drawableStart="@drawable/ic_car"
        android:drawableLeft="@drawable/ic_car" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/conditions_utilisations"
        android:gravity="center"
        android:textColor="#0055ff"
        />

</LinearLayout>
