<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:id="@+id/container">
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loader"
        android:visibility="invisible"
        android:layout_centerInParent="true"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_centerVertical="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/form_container">
<ImageView
    android:layout_width="200dp"
    android:layout_height="100dp"
    android:src="@drawable/logo"
    android:layout_gravity="center"
    android:tint="@android:color/white"/>
        <EditText
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#D81B60"
            android:hint="@string/hint_email"
            android:padding="10dp"
            android:drawableLeft="@drawable/ic_user_24dp"
            android:drawableStart="@drawable/ic_user_24dp"
            android:drawableTint="@android:color/white"
            android:drawablePadding="16dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:id="@+id/email_input"
            android:inputType="textEmailAddress" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#D81B60"
            android:hint="@string/hint_password"
            android:padding="10dp"
            android:drawableLeft="@drawable/ic_user_24dp"
            android:drawableStart="@drawable/ic_lock_outline_24dp"
            android:drawableTint="@android:color/white"
            android:id="@+id/mot_passe_input"
            android:inputType="textPassword"
            android:drawablePadding="16dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />
<Button
    android:layout_marginTop="30dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#CE93D8"
    android:textColor="@android:color/white"
    android:text="@string/auth"
    android:id="@+id/btn_login"/>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mot_passe_o"
            android:textColor="@android:color/white"
            android:onClick="goForgotPassword"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:background="@drawable/circle_button"
                android:src="@drawable/ic_facebook"
                android:layout_margin="4dp"
                android:tint="@android:color/white"
                android:id="@+id/btn_facebook"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account"
            android:textColor="@android:color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inscrire"
            android:textColor="@android:color/white"
            android:textStyle="bold"
           android:id="@+id/go_to_register"/>
        


    </LinearLayout>
</RelativeLayout>