<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/forgotpassword_background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            android:tint="@android:color/white"/>
        <EditText
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#D81B60"
            android:hint="@string/hint_email"
            android:padding="10dp"
            android:drawableLeft="@drawable/ic_user_24dp"
            android:drawableStart="@drawable/ic_user_24dp"

            android:drawablePadding="16dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:id="@+id/email_input"
            />


        <Button
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#CE93D8"
            android:textColor="@android:color/white"
            android:text="@string/soumettre"
            android:id="@+id/btn_submit_email"
         />



<TextView
    android:layout_marginTop="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/r_auth"
    android:textColor="@android:color/white"
android:onClick="goToLogin"
    />

    </LinearLayout>


</RelativeLayout>